fixed download buttons on mobile

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -284,8 +284,9 @@ h1{
 }
 
 .button-bar{
-  display: flex;
+  text-align: center;
+  /*display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center;*/
   font-size: 0.8rem;
 }
